force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/cgcloud__Promotion_Reward_Product__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of product assigned to a promotion reward.</description>
    <label>Promotion Reward Product</label>
    <nameField>
        <displayFormat>PRP-{00000}</displayFormat>
        <label>Promotion Reward Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Reward Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>