force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Default_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Value__c</fullName>
    <description>The default value to be delivered for this product.</description>
    <label>Default Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>