force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Included__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Included__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Define if the product must be included on pricing calculations in context of selectable promotion.</description>
    <inlineHelpText>Define if the product must be included on pricing calculations in context of selectable promotion.</inlineHelpText>
    <label>Included</label>
    <type>Checkbox</type>
</CustomField>