force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Logistic_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Logistic_Unit__c</fullName>
    <label>Logistic Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>cgcloud__Logistic_Unit</valueSetName>
    </valueSet>
</CustomField>