force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Max_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Value__c</fullName>
    <description>The maximum value that can be delivered for this product.</description>
    <label>Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>