force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Product__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Product for which the specific configuration applies to.</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$User.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promotion Reward Products</relationshipLabel>
    <relationshipName>Promotion_Reward_Products</relationshipName>
    <type>Lookup</type>
</CustomField>