force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Product_Unique__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Unique__c</fullName>
    <label>Product &amp; Logistic Unit</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>