force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Promotion_Reward__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Reward__c</fullName>
    <description>Master-Detail to the Reward for which the Product specific configuration applies to.</description>
    <label>Promotion Reward</label>
    <referenceTo>cgcloud__Promotion_Reward__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Promotion_Reward_Product</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>