force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/fields/cgcloud__Reward_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reward_Type__c</fullName>
    <description>Formula to show the type of the related reward.</description>
    <formula>TEXT(cgcloud__Promotion_Reward__r.cgcloud__Reward_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reward Type</label>
    <type>Text</type>
</CustomField>