force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/validationRules/cgcloud__Prod_must_belong_to_the_same_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prod_must_belong_to_the_same_Sales_Org</fullName>
    <active>true</active>
    <description>The Product and the Reward Group related to the Reward must have the same Sales Org.</description>
    <errorConditionFormula>AND( cgcloud__Product__r.cgcloud__Sales_Org__c &lt;&gt; TEXT(cgcloud__Promotion_Reward__r.cgcloud__Promotion_Reward_Group__r.cgcloud__Sales_Org__c) )</errorConditionFormula>
    <errorMessage>The Product and the Reward Group related to the Reward must have the same Sales Org.</errorMessage>
</ValidationRule>