force-app/main/default/objects/cgcloud__Promotion_Reward_Product__c/validationRules/cgcloud__Prom_Rew_Prod_cannot_be_added_or_updated.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prom_Rew_Prod_cannot_be_added_or_updated</fullName>
    <active>false</active>
    <description>Reward Products can&apos;t be added or edited if the Promotion Phase is &apos;Committed&apos;.</description>
    <errorConditionFormula>AND(cgcloud__Promotion_Reward__r.cgcloud__Promotion_Reward_Group__r.cgcloud__Promotion__r.cgcloud__Promotion_Template__r.cgcloud__Consider_Promotion_Rewards__c == TRUE,
ISPICKVAL(cgcloud__Promotion_Reward__r.cgcloud__Promotion_Reward_Group__r.cgcloud__Promotion__r.cgcloud__Phase__c, &apos;Committed&apos;))</errorConditionFormula>
    <errorMessage>Reward Products can&apos;t be added or edited if the Promotion Phase is &apos;Committed&apos;.</errorMessage>
</ValidationRule>